<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="minhas_tarefas">Minhas Tarefas</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="cadastro_de_atividade">Cadastro de Atividade</string>
    <string name="digite_nome_tarefa">Nome da Tarefa</string>
    <string name="descricao_tarefa">Descrição da tarefa</string>
    <string name="data_escolhida_nenhuma">Data Escolhida : Nenhuma</string>
    <string name="escolher_data">Escolher Data</string>
    <string name="textSalvar">SALVAR</string>
    <string name="textCancelar">CANCELAR</string>
    <string name="titulo_tarefa">Título da tarefa</string>
    <string name="data_limite">Data limite: 01/01/2025</string>
    <string name="editar_tarefa">Editar Tarefa</string>
    <string name="excluir_tarefa">Excluir Tarefa</string>
    <string name="detalhes">Detalhes</string>
    <string name="concluir_tarefa">Concluir Tarefa</string>
    <string name="deixar_pendente">Deixar pendente</string>
    <string name="estado">Estado da Tarefa : Nenhum</string>
    <string name="default_web_client_id">SEU_CLIENT_ID_AQUI</string>
</resources>